fix close button on modal image not visible

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -80,7 +80,7 @@
 }
 
 #close-button {
-  color: #eee;
+  color: #999;
   font: 100px bold;
   position: -webkit-sticky;
   position: sticky;
@@ -89,7 +89,7 @@
 }
 
 #close-button:hover {
-  color: #bbb;
+  color: #555;
   cursor: pointer;
 }
 
